Rewritten the convertor with classes
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/tooling/Makefile
+++ b/tooling/Makefile
@@ -1,3 +1,13 @@
 
 test:
-	./Get-Sub-Graph-With-Path kmers.txt RaySeed-7000015.fasta CustomSource.js
+	./Get-Sub-Graph-With-Path kmers.txt RaySeed-7000015.fasta 16 CustomSource.js
+
+t1000:
+	./Get-Sub-Graph-With-Path kmers.txt 1000.fasta 16 1000.fasta.js
+
+
+small:
+	./Get-Sub-Graph-With-Path kmers.txt.10000 1000.fasta 16 1000.fasta.js
+
+tiny:
+	./Get-Sub-Graph-With-Path kmers.txt.tiny 1000.fasta 16 1000.fasta.js
