Program names are now prefixed
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,28 +1,23 @@
 # \see http://www.cprogramming.com/tutorial/makefiles_continued.html
 # \author Sébastien Boisvert
-# \author Sébastien Boisvert
-# \author Sébastien Boisvert
-# \author Sébastien Boisvert
-# \author Sébastien Boisvert
-# \author Sébastien Boisvert
 
 CXX=g++
 CXXFLAGS= -O3 -Wall -march=native -pipe
 
-TARGETS=commandLineClient createGraphDatabase getSubgraphWithPath
+TARGETS=RayCloudBrowser.commandLineClient RayCloudBrowser.createGraphDatabase RayCloudBrowser.getSubgraphWithPath
 
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $? -o $@
 
 all: $(TARGETS)
 
-commandLineClient: commandLineClient_main.o GraphDatabase.o VertexObject.o
+RayCloudBrowser.commandLineClient: commandLineClient_main.o GraphDatabase.o VertexObject.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-createGraphDatabase: createGraphDatabase_main.o
+RayCloudBrowser.createGraphDatabase: createGraphDatabase_main.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-getSubgraphWithPath: getSubgraphWithPath_main.o GraphDatabase.o VertexObject.o
+RayCloudBrowser.getSubgraphWithPath: getSubgraphWithPath_main.o GraphDatabase.o VertexObject.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
 clean:
