Added a file mapper
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,19 +5,20 @@ CXX=g++
 CXXFLAGS= -O3 -Wall -march=native -pipe
 
 TARGETS=RayCloudBrowser.commandLineClient RayCloudBrowser.createGraphDatabase RayCloudBrowser.getSubgraphWithPath
+LIBRARY_OBJECTS=GraphDatabase.o VertexObject.o Mapper.o
 
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $? -o $@
 
 all: $(TARGETS)
 
-RayCloudBrowser.commandLineClient: commandLineClient_main.o GraphDatabase.o VertexObject.o
+RayCloudBrowser.commandLineClient: commandLineClient_main.o $(LIBRARY_OBJECTS)
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-RayCloudBrowser.createGraphDatabase: createGraphDatabase_main.o
+RayCloudBrowser.createGraphDatabase: createGraphDatabase_main.o $(LIBRARY_OBJECTS)
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-RayCloudBrowser.getSubgraphWithPath: getSubgraphWithPath_main.o GraphDatabase.o VertexObject.o
+RayCloudBrowser.getSubgraphWithPath: getSubgraphWithPath_main.o $(LIBRARY_OBJECTS)
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
 clean:
