added code to index sequences in path index
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -42,3 +42,6 @@ test-first:
 
 test-not-found:
 	QUERY_STRING="tag=RAY_MESSAGE_TAG_GET_KMER_FROM_STORE&content=fdfddfjdsfdjsclkk" ./RayCloudBrowser.webServer.cgi
+
+path:
+	./RayCloudBrowser.createPathDatabase ~/Ray-Cloud-Browser-data/Contigs.fasta ~/Ray-Cloud-Browser-data/Contigs.fasta.dat
