change the user name in Apache conf.
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/Documentation/Apache-with-public_html.conf
+++ b/Documentation/Apache-with-public_html.conf
@@ -5,7 +5,7 @@
     # permissions).
     #
 
-    UserDir enabled sebhtml
+    UserDir enabled web
 
     #
     # To enable requests to /~user/ to serve the user's public_html
@@ -29,6 +29,6 @@
 
 </Directory>
 
-Alias /client /home/sebhtml/public_html/Ray-Cloud-Browser/client
-Alias /server /home/sebhtml/public_html/Ray-Cloud-Browser/server
+Alias /client /home/web/public_html/Ray-Cloud-Browser/client
+Alias /server /home/web/public_html/Ray-Cloud-Browser/server
 
