add command describeMapAnnotations to check annotations
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -16,7 +16,8 @@ storage/LocationAnnotation.o storage/Annotation.o \
 JSONParser.o JSONNode.o WebService.o \
 commands/ObjectFetcher.o commands/GraphManager.o commands/PathHelper.o \
 commands/Explorer.o commands/PathProbe.o \
-commands/Parser.o commands/GraphExporter.o commands/AnnotationManager.o
+commands/Parser.o commands/GraphExporter.o commands/AnnotationManager.o \
+commands/AnnotationReporter.o
 
 %.o: %.cpp
 	$(Q)echo "CXX $@"
