--- a/server/Makefile
+++ b/server/Makefile
@@ -14,7 +14,8 @@ STORAGE= storage/GraphDatabase.o storage/VertexObject.o storage/Mapper.o \
 storage/PathDatabase.o storage/AnnotationEngine.o \
 storage/LocationAnnotation.o storage/Annotation.o
 
-ACTIONS= actions/WebAction.o actions/StoreRequest.o actions/RegionVisitor.o
+ACTIONS= actions/WebAction.o actions/StoreRequest.o actions/RegionVisitor.o \
+actions/EarlyExplorer.o
 
 SERVICE= JSONParser.o JSONNode.o WebService.o
 
