add web action to list maps
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -15,7 +15,7 @@ storage/PathDatabase.o storage/AnnotationEngine.o \
 storage/LocationAnnotation.o storage/Annotation.o
 
 ACTIONS= actions/WebAction.o actions/StoreRequest.o actions/RegionVisitor.o \
-actions/EarlyExplorer.o
+actions/EarlyExplorer.o actions/MapList.o
 
 SERVICE= JSONParser.o JSONNode.o WebService.o
 
