add new command describe-map-object-annotations
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/server/Makefile
+++ b/server/Makefile
@@ -22,7 +22,7 @@ SERVICE= JSONParser.o JSONNode.o WebService.o
 COMMANDS= commands/ObjectFetcher.o commands/GraphManager.o commands/PathHelper.o \
 commands/Explorer.o commands/PathProbe.o \
 commands/Parser.o commands/GraphExporter.o commands/AnnotationManager.o \
-commands/AnnotationReporter.o commands/MapDescriber.o
+commands/AnnotationReporter.o commands/MapDescriber.o commands/ObjectAnnotationList.o
 
 LIBRARY_OBJECTS= $(STORAGE) $(ACTIONS) $(SERVICE) $(COMMANDS)
 
