hide RayCloudBrowser.cgi from the client
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/Documentation/Apache-with-public_html.conf
+++ b/Documentation/Apache-with-public_html.conf
@@ -1,34 +1,22 @@
+# Put this file in /etc/httpd/conf.d/ (Fedora) or
+# in /etc/apache2/conf.d/ (Debian).
+# You can deploy the software with other web servers too.
+# You may have to change the user (web).
+
 <IfModule mod_userdir.c>
-    #
-    # UserDir is disabled by default since it can confirm the presence
-    # of a username on the system (depending on home directory
-    # permissions).
-    #
-
-    UserDir enabled web
-
-    #
-    # To enable requests to /~user/ to serve the user's public_html
-    # directory, remove the "UserDir disabled" line above, and uncomment
-    # the following line instead:
-    # 
-    UserDir public_html
-
+	UserDir enabled
+	UserDir public_html
+	Alias /client /home/web/public_html/Ray-Cloud-Browser/client
+	Alias /server /home/web/public_html/Ray-Cloud-Browser/server
 </IfModule>
 
 <Directory /home/*/public_html>
+	Options  ExecCGI 
+	DirectoryIndex index.html RayCloudBrowser.cgi
 
-    #Options Indexes Includes ExecCGI FollowSymLinks
-    Options  ExecCGI 
+	AllowOverride All
+	Allow from all
+	Order allow,deny
 
-    AllowOverride All
-    Allow from all
-    Order allow,deny
-    
-    AddHandler cgi-script .cgi
-
+	AddHandler cgi-script .cgi
 </Directory>
-
-Alias /client /home/web/public_html/Ray-Cloud-Browser/client
-Alias /server /home/web/public_html/Ray-Cloud-Browser/server
-
