need to follow symbolic links too
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/Documentation/Apache-with-public_html.conf
+++ b/Documentation/Apache-with-public_html.conf
@@ -11,7 +11,7 @@
 </IfModule>
 
 <Directory /home/*/public_html>
-	Options  ExecCGI 
+	Options  ExecCGI FollowSymLinks
 	DirectoryIndex index.html RayCloudBrowser.cgi
 
 	AllowOverride All
